Closed
Bug 1770458
Opened 3 years ago
Closed 3 years ago
perma [tier2] /builds/worker/checkouts/gecko/dom/ipc/ProcessPriorityManager.cpp:514:10: error: '%s' directive argument is null [-Werror=format-overflow=]
Categories
(Firefox Build System :: General, defect, P5)
Firefox Build System
General
Tracking
(firefox-esr91 unaffected, firefox100 unaffected, firefox101 unaffected, firefox102 fixed)
RESOLVED
FIXED
102 Branch
Tracking | Status | |
---|---|---|
firefox-esr91 | --- | unaffected |
firefox100 | --- | unaffected |
firefox101 | --- | unaffected |
firefox102 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: emilio)
References
(Regression)
Details
(Keywords: intermittent-failure, regression)
Attachments
(1 file)
Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=378793187&repo=mozilla-central
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/aC2qyo9vQAyRKJINoViHHg/runs/0/artifacts/public/logs/live_backing.log
[task 2022-05-20T15:47:36.598Z] 15:47:36 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/ipc'
[task 2022-05-20T15:47:36.604Z] 15:47:36 INFO - /builds/worker/fetches/sccache/sccache /builds/worker/fetches/gcc/bin/g++ --sysroot /builds/worker/fetches/sysroot-x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu/c++/7.5.0 -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/x86_64-linux-gnu -isystem /builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include -o Unified_cpp_dom_ipc1.o -c -I/builds/worker/workspace/obj-build/dist/stl_wrappers -I/builds/worker/workspace/obj-build/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DNDEBUG=1 -DTRIMMED=1 -DOS_POSIX=1 -DOS_LINUX=1 '-DBIN_SUFFIX=""' '-DMOZ_APP_NAME="firefox"' -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -DSTATIC_EXPORTABLE_JS_API -I/builds/worker/checkouts/gecko/dom/ipc -I/builds/worker/workspace/obj-build/dom/ipc -I/builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders -I/builds/worker/checkouts/gecko/ipc/chromium/src -I/builds/worker/checkouts/gecko/caps -I/builds/worker/checkouts/gecko/chrome -I/builds/worker/checkouts/gecko/docshell/base -I/builds/worker/checkouts/gecko/dom/base -I/builds/worker/checkouts/gecko/dom/bindings -I/builds/worker/checkouts/gecko/dom/events -I/builds/worker/checkouts/gecko/dom/filesystem -I/builds/worker/checkouts/gecko/dom/geolocation -I/builds/worker/checkouts/gecko/dom/media/webrtc -I/builds/worker/checkouts/gecko/dom/media/webspeech/synth/ipc -I/builds/worker/checkouts/gecko/dom/security -I/builds/worker/checkouts/gecko/dom/storage -I/builds/worker/checkouts/gecko/extensions/spellcheck/src -I/builds/worker/checkouts/gecko/gfx/2d -I/builds/worker/checkouts/gecko/hal/sandbox -I/builds/worker/checkouts/gecko/js/xpconnect/loader -I/builds/worker/checkouts/gecko/js/xpconnect/src -I/builds/worker/checkouts/gecko/layout/base -I/builds/worker/checkouts/gecko/media/webrtc -I/builds/worker/checkouts/gecko/netwerk/base -I/builds/worker/checkouts/gecko/netwerk/protocol/http -I/builds/worker/checkouts/gecko/toolkit/components/printingui/ipc -I/builds/worker/checkouts/gecko/toolkit/crashreporter -I/builds/worker/checkouts/gecko/toolkit/xre -I/builds/worker/checkouts/gecko/uriloader/exthandler -I/builds/worker/checkouts/gecko/widget -I/builds/worker/checkouts/gecko/xpcom/base -I/builds/worker/checkouts/gecko/xpcom/threads -I/builds/worker/checkouts/gecko/modules/libjar -I/builds/worker/workspace/obj-build/dist/include -I/builds/worker/workspace/obj-build/dist/include/nspr -I/builds/worker/workspace/obj-build/dist/include/nss -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-build/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wno-invalid-offsetof -Wc++2a-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wno-error=deprecated-copy -Wformat -Wformat-overflow=2 -Wno-psabi -D_GLIBCXX_USE_CXX11_ABI=0 -fno-sized-deallocation -fno-aligned-new -fno-exceptions -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -pthread -pipe -gdwarf-4 -freorder-blocks -O2 -fno-omit-frame-pointer -funwind-tables -Werror -pthread -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0/unix-print -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi2-atk/2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/at-spi-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/dbus-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gtk-3.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/harfbuzz -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pango-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/atk-1.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/cairo -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/pixman-1 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/freetype2 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gdk-pixbuf-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/libpng12 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/gio-unix-2.0/ -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/include/glib-2.0 -I/builds/worker/fetches/sysroot-x86_64-linux-gnu/usr/lib/x86_64-linux-gnu/glib-2.0/include -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_dom_ipc1.o.pp Unified_cpp_dom_ipc1.cpp
[task 2022-05-20T15:47:36.604Z] 15:47:36 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:53,
[task 2022-05-20T15:47:36.605Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders/mozilla/dom/PBrowserBridgeParent.h:33,
[task 2022-05-20T15:47:36.605Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/BrowserBridgeParent.h:10,
[task 2022-05-20T15:47:36.605Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/BrowserParent.h:18,
[task 2022-05-20T15:47:36.605Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/dom/ipc/FilePickerParent.cpp:18,
[task 2022-05-20T15:47:36.606Z] 15:47:36 INFO - from Unified_cpp_dom_ipc1.cpp:11:
[task 2022-05-20T15:47:36.606Z] 15:47:36 INFO - /builds/worker/workspace/obj-build/dist/include/FrameProperties.h: In instantiation of 'static mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::ReinterpretHelper<T>::FromInternalValue(uint64_t) [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; uint64_t = long unsigned int]':
[task 2022-05-20T15:47:36.607Z] 15:47:36 INFO - /builds/worker/workspace/obj-build/dist/include/FrameProperties.h:202:51: required from 'mozilla::FrameProperties::PropertyType<T> mozilla::FrameProperties::Get(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<mozilla::FrameBidiData> >*]'
[task 2022-05-20T15:47:36.607Z] 15:47:36 INFO - /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:4141:27: required from 'mozilla::FrameProperties::PropertyType<T> nsIFrame::GetProperty(mozilla::FrameProperties::Descriptor<T>, bool*) const [with T = mozilla::SmallValueHolder<mozilla::FrameBidiData>; mozilla::FrameProperties::PropertyType<T> = mozilla::FrameBidiData; mozilla::FrameProperties::Descriptor<T> = const mozilla::FramePropertyDescriptor<mozilla::SmallValueHolder<mozilla::FrameBidiData> >*]'
[task 2022-05-20T15:47:36.608Z] 15:47:36 INFO - /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:1344:50: required from here
[task 2022-05-20T15:47:36.608Z] 15:47:36 WARNING - /builds/worker/workspace/obj-build/dist/include/FrameProperties.h:302:13: warning: 'void* memcpy(void*, const void*, size_t)' copying an object of non-trivial type 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<mozilla::FrameBidiData> >' {aka 'struct mozilla::FrameBidiData'} from an array of 'uint64_t' {aka 'long unsigned int'} [-Wclass-memaccess]
[task 2022-05-20T15:47:36.609Z] 15:47:36 INFO - 302 | memcpy(&value, &aInternalValue, sizeof(value));
[task 2022-05-20T15:47:36.609Z] 15:47:36 INFO - | ~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-05-20T15:47:36.609Z] 15:47:36 INFO - In file included from /builds/worker/workspace/obj-build/ipc/ipdl/_ipdlheaders/mozilla/dom/PBrowserBridgeParent.h:33,
[task 2022-05-20T15:47:36.609Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/BrowserBridgeParent.h:10,
[task 2022-05-20T15:47:36.609Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/BrowserParent.h:18,
[task 2022-05-20T15:47:36.610Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/dom/ipc/FilePickerParent.cpp:18,
[task 2022-05-20T15:47:36.610Z] 15:47:36 INFO - from Unified_cpp_dom_ipc1.cpp:11:
[task 2022-05-20T15:47:36.611Z] 15:47:36 INFO - /builds/worker/workspace/obj-build/dist/include/nsIFrame.h:410:8: note: 'mozilla::FrameProperties::PropertyType<mozilla::SmallValueHolder<mozilla::FrameBidiData> >' {aka 'struct mozilla::FrameBidiData'} declared here
[task 2022-05-20T15:47:36.611Z] 15:47:36 INFO - 410 | struct FrameBidiData {
[task 2022-05-20T15:47:36.611Z] 15:47:36 INFO - | ^~~~~~~~~~~~~
[task 2022-05-20T15:47:36.611Z] 15:47:36 INFO - In file included from Unified_cpp_dom_ipc1.cpp:101:
[task 2022-05-20T15:47:36.611Z] 15:47:36 INFO - In function 'nsCString {anonymous}::BCToString(mozilla::dom::CanonicalBrowsingContext*)',
[task 2022-05-20T15:47:36.612Z] 15:47:36 INFO - inlined from 'void {anonymous}::ProcessPriorityManagerImpl::BrowserPriorityChanged(mozilla::dom::CanonicalBrowsingContext*, bool)' at /builds/worker/checkouts/gecko/dom/ipc/ProcessPriorityManager.cpp:524:3,
[task 2022-05-20T15:47:36.612Z] 15:47:36 INFO - inlined from 'static void mozilla::ProcessPriorityManager::BrowserPriorityChanged(mozilla::dom::CanonicalBrowsingContext*, bool)' at /builds/worker/checkouts/gecko/dom/ipc/ProcessPriorityManager.cpp:988:38:
[task 2022-05-20T15:47:36.612Z] 15:47:36 ERROR - /builds/worker/checkouts/gecko/dom/ipc/ProcessPriorityManager.cpp:514:10: error: '%s' directive argument is null [-Werror=format-overflow=]
[task 2022-05-20T15:47:36.613Z] 15:47:36 INFO - 514 | return nsPrintfCString("id=%" PRIu64 " uri=%s active=%d pactive=%d",
[task 2022-05-20T15:47:36.613Z] 15:47:36 INFO - | ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-05-20T15:47:36.613Z] 15:47:36 INFO - 515 | aBC->Id(),
[task 2022-05-20T15:47:36.613Z] 15:47:36 INFO - | ~~~~~~~~~~
[task 2022-05-20T15:47:36.613Z] 15:47:36 INFO - 516 | uri ? uri->GetSpecOrDefault().get() : nullptr,
[task 2022-05-20T15:47:36.614Z] 15:47:36 INFO - | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-05-20T15:47:36.614Z] 15:47:36 INFO - 517 | aBC->IsActive(), aBC->IsPriorityActive());
[task 2022-05-20T15:47:36.614Z] 15:47:36 INFO - | ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
[task 2022-05-20T15:47:36.614Z] 15:47:36 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsTArray.h:3340,
[task 2022-05-20T15:47:36.615Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message.h:20,
[task 2022-05-20T15:47:36.615Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message_utils.h:22,
[task 2022-05-20T15:47:36.615Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/ipc/EnumSerializer.h:11,
[task 2022-05-20T15:47:36.615Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/DocShellMessageUtils.h:10,
[task 2022-05-20T15:47:36.616Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/dom/ipc/DocShellMessageUtils.cpp:7,
[task 2022-05-20T15:47:36.616Z] 15:47:36 INFO - from Unified_cpp_dom_ipc1.cpp:2:
[task 2022-05-20T15:47:36.616Z] 15:47:36 INFO - /builds/worker/workspace/obj-build/dist/include/nsTArray-inl.h: In member function 'void mozilla::dom::FilePickerParent::SendFilesOrDirectories(const nsTArray<mozilla::dom::FilePickerParent::BlobImplOrString>&)':
[task 2022-05-20T15:47:36.617Z] 15:47:36 WARNING - /builds/worker/workspace/obj-build/dist/include/nsTArray-inl.h:452:26: warning: array subscript 1 is outside array bounds of 'nsTArray<mozilla::dom::IPCBlob> [1]' [-Warray-bounds]
[task 2022-05-20T15:47:36.627Z] 15:47:36 INFO - 452 | mArray.mHdr->mLength = 0;
[task 2022-05-20T15:47:36.627Z] 15:47:36 INFO - | ~~~~~~~~~~~~~~~~~~~~~^~~
[task 2022-05-20T15:47:36.627Z] 15:47:36 INFO - In file included from Unified_cpp_dom_ipc1.cpp:11:
[task 2022-05-20T15:47:36.627Z] 15:47:36 INFO - /builds/worker/checkouts/gecko/dom/ipc/FilePickerParent.cpp:153:21: note: while referencing 'ipcBlobs'
[task 2022-05-20T15:47:36.627Z] 15:47:36 INFO - 153 | nsTArray<IPCBlob> ipcBlobs;
[task 2022-05-20T15:47:36.627Z] 15:47:36 INFO - | ^~~~~~~~
[task 2022-05-20T15:47:36.628Z] 15:47:36 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsTArray.h:3340,
[task 2022-05-20T15:47:36.628Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message.h:20,
[task 2022-05-20T15:47:36.628Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message_utils.h:22,
[task 2022-05-20T15:47:36.628Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/ipc/EnumSerializer.h:11,
[task 2022-05-20T15:47:36.629Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/DocShellMessageUtils.h:10,
[task 2022-05-20T15:47:36.629Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/dom/ipc/DocShellMessageUtils.cpp:7,
[task 2022-05-20T15:47:36.629Z] 15:47:36 INFO - from Unified_cpp_dom_ipc1.cpp:2:
[task 2022-05-20T15:47:36.630Z] 15:47:36 WARNING - /builds/worker/workspace/obj-build/dist/include/nsTArray-inl.h:452:26: warning: array subscript 1 is outside array bounds of 'mozilla::dom::PFilePickerParent::InputBlobs [1]' {aka 'mozilla::dom::InputBlobs [1]'} [-Warray-bounds]
[task 2022-05-20T15:47:36.630Z] 15:47:36 INFO - 452 | mArray.mHdr->mLength = 0;
[task 2022-05-20T15:47:36.630Z] 15:47:36 INFO - | ~~~~~~~~~~~~~~~~~~~~~^~~
[task 2022-05-20T15:47:36.630Z] 15:47:36 INFO - In file included from Unified_cpp_dom_ipc1.cpp:11:
[task 2022-05-20T15:47:36.630Z] 15:47:36 INFO - /builds/worker/checkouts/gecko/dom/ipc/FilePickerParent.cpp:167:14: note: while referencing 'inblobs'
[task 2022-05-20T15:47:36.630Z] 15:47:36 INFO - 167 | InputBlobs inblobs;
[task 2022-05-20T15:47:36.631Z] 15:47:36 INFO - | ^~~~~~~
[task 2022-05-20T15:47:36.631Z] 15:47:36 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsTArray.h:3340,
[task 2022-05-20T15:47:36.631Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message.h:20,
[task 2022-05-20T15:47:36.631Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message_utils.h:22,
[task 2022-05-20T15:47:36.631Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/ipc/EnumSerializer.h:11,
[task 2022-05-20T15:47:36.632Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/DocShellMessageUtils.h:10,
[task 2022-05-20T15:47:36.632Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/dom/ipc/DocShellMessageUtils.cpp:7,
[task 2022-05-20T15:47:36.632Z] 15:47:36 INFO - from Unified_cpp_dom_ipc1.cpp:2:
[task 2022-05-20T15:47:36.633Z] 15:47:36 WARNING - /builds/worker/workspace/obj-build/dist/include/nsTArray-inl.h:452:26: warning: array subscript 1 is outside array bounds of 'nsTArray<mozilla::dom::IPCBlob> [1]' [-Warray-bounds]
[task 2022-05-20T15:47:36.633Z] 15:47:36 INFO - 452 | mArray.mHdr->mLength = 0;
[task 2022-05-20T15:47:36.633Z] 15:47:36 INFO - | ~~~~~~~~~~~~~~~~~~~~~^~~
[task 2022-05-20T15:47:36.633Z] 15:47:36 INFO - In file included from Unified_cpp_dom_ipc1.cpp:11:
[task 2022-05-20T15:47:36.636Z] 15:47:36 INFO - /builds/worker/checkouts/gecko/dom/ipc/FilePickerParent.cpp:153:21: note: while referencing 'ipcBlobs'
[task 2022-05-20T15:47:36.636Z] 15:47:36 INFO - 153 | nsTArray<IPCBlob> ipcBlobs;
[task 2022-05-20T15:47:36.636Z] 15:47:36 INFO - | ^~~~~~~~
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - In file included from /builds/worker/workspace/obj-build/dist/include/nsTArray.h:3340,
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message.h:20,
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/ipc/chromium/src/chrome/common/ipc_message_utils.h:22,
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/ipc/EnumSerializer.h:11,
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - from /builds/worker/workspace/obj-build/dist/include/mozilla/dom/DocShellMessageUtils.h:10,
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - from /builds/worker/checkouts/gecko/dom/ipc/DocShellMessageUtils.cpp:7,
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - from Unified_cpp_dom_ipc1.cpp:2:
[task 2022-05-20T15:47:36.637Z] 15:47:36 WARNING - /builds/worker/workspace/obj-build/dist/include/nsTArray-inl.h:452:26: warning: array subscript 1 is outside array bounds of 'mozilla::dom::PFilePickerParent::InputBlobs [1]' {aka 'mozilla::dom::InputBlobs [1]'} [-Warray-bounds]
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - 452 | mArray.mHdr->mLength = 0;
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - | ~~~~~~~~~~~~~~~~~~~~~^~~
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - In file included from Unified_cpp_dom_ipc1.cpp:11:
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - /builds/worker/checkouts/gecko/dom/ipc/FilePickerParent.cpp:167:14: note: while referencing 'inblobs'
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - 167 | InputBlobs inblobs;
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - | ^~~~~~~
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - cc1plus: all warnings being treated as errors
[task 2022-05-20T15:47:36.637Z] 15:47:36 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:660: Unified_cpp_dom_ipc1.o] Error 1
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - gmake[4]: Leaving directory '/builds/worker/workspace/obj-build/dom/ipc'
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - gmake[4]: *** Waiting for unfinished jobs....
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - gmake[4]: Entering directory '/builds/worker/workspace/obj-build/dom/media/gmp'
[task 2022-05-20T15:47:36.637Z] 15:47:36 INFO - dom/media/gmp/Unified_cpp_dom_media_gmp2.o
Comment 2•3 years ago
|
||
Set release status flags based on info from the regressing bug 1767346
status-firefox100:
--- → unaffected
status-firefox101:
--- → unaffected
status-firefox102:
--- → affected
status-firefox-esr91:
--- → unaffected
Assignee | ||
Updated•3 years ago
|
Assignee: nobody → emilio
Flags: needinfo?(emilio)
Assignee | ||
Comment 3•3 years ago
|
||
Pushed by ealvarez@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/9a35f3b4a2fd
Don't pass null to format string in some logging code.
Comment 5•3 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch
Comment hidden (Intermittent Failures Robot) |
Updated•3 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•