Bug 1770458 - Don't pass null to format string in some logging code.

Differential Revision: https://phabricator.services.mozilla.com/D146929